# imbs

./: .gitignore  CMakeLists.txt  README.txt  README_BUILD_JAVA.txt  build.gradle  cppbuild.sh  imagemanager.cpp  imagemanager.h  imbs.cpp  imbs.hpp  main.cpp
gradle/wrapper/: gradle-wrapper.properties
src/main/java/org/fjank/imbs/: Imbs.java
